--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
         
         <footer>
-            <p>&copy; 2024 Minimalist Watch Face | <a href="/webpages/Privacy.html">Privacy Policy</a></p>
+            <p>&copy; 2024 Minimalist Watch Face | <a href="/AndroidWatchFace/webpages/Privacy.html">Privacy Policy</a></p>
         </footer>
     </div>
 
