--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section>
             <h2>Download</h2>
             <p>You can download the Minimalist Watch Face directly from the Google Play Store:</p>
-            <a href="https://play.google.com/store/apps/details?id=com.example.minimalistwatchface" target="_blank">Download on Google Play</a>
+            <a href="https://play.google.com/store/apps/details?id=com.pruthviraj.minimalistface" target="_blank">Download on Google Play</a>
         </section>
         
         <footer>
