add display icon

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <section>
             <h2>Watch Face Preview</h2>
             <div class="watch-face">
-                <img src="watch-face-preview.jpg" alt="Minimalist Watch Face Preview">
+                <img src="./webpages/watchFace1_Screenshot_20240912_15081626.png" alt="Minimalist Watch Face Preview">
                 <div class="watch-face-info">
                     <p>With the Minimalist Watch Face, you can give your Wear OS device a modern, minimal look. The design focuses on clarity and usability, perfect for those who prefer simplicity.</p>
                 </div>
